--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .25s ease;
 }
 
 .card-text {
@@ -55,4 +56,8 @@
 
 #card-text {
   cursor: pointer;
+}
+
+.timer-clicker:hover {
+  width: 13em;
 }
