--- a/style.css
+++ b/style.css
@@ -140,3 +140,31 @@ li {
   width: 13em;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 390px) {
+  .card {
+    margin: 5px 0;
+    border-radius: none;
+    box-shadow: none;
+  }
+
+  #nav-bar {
+    position: sticky;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #card-holder {
+    flex-direction: column;
+  }
+
+  #title-text {
+    margin: 0;
+  }
+
+  #length-of-days {
+    margin: 0;
+  }
+  
+}
