--- a/style.css
+++ b/style.css
@@ -141,6 +141,33 @@ li {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 820px) {
+  .card {
+    margin: 5px 0;
+    border-radius: none;
+    box-shadow: none;
+  }
+
+  #nav-bar {
+    position: sticky;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #card-holder {
+    flex-direction: column;
+  }
+
+  #title-text {
+    margin: 0;
+  }
+
+  #length-of-days {
+    margin: 0;
+  }
+}
+
 @media only screen and (max-width: 390px) {
   .card {
     margin: 5px 0;
