--- a/style.css
+++ b/style.css
@@ -140,6 +140,12 @@ li {
   cursor: pointer;
 }
 
+@media screen and (min-width: 1223px) {
+  #card-holder {
+    width: 75%;
+  }
+}
+
 @media only screen and (max-width: 820px) {
   .card {
     margin: 5px 0;
