--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ li {
 
 #length-of-days {
   margin-right: 30px;
+  font-size: 2em;
 }
 
 #card-section {
@@ -185,6 +186,7 @@ li {
 
   #length-of-days {
     margin: 0;
+    font-size: 1em;
   }
 
   #nav-underline {
@@ -219,10 +221,28 @@ li {
 
   #length-of-days {
     margin: 0;
+    font-size: 1em;
   }
   
   #nav-underline {
     position: sticky;
     top: 6em;
+  }
+}
+
+@media only screen and (min-height: 615px) and (max-height: 660px) {
+  .card {
+    height: 15em;
+  }
+
+  #card-holder {
+    margin-top: 100px;
+    width: 90%;
+  }
+}
+
+@media only screen and (max-height: 610px) {
+  .card {
+    height: 15em;
   }
 }
