--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ li {
   margin: 0;
   margin-left: 50px;
   font-size: 50px;
+  margin-top: -10px;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -182,6 +183,7 @@ li {
 
   #title-text {
     margin: 0;
+    margin-top: -15px;
   }
 
   #length-of-days {
@@ -217,6 +219,7 @@ li {
 
   #title-text {
     margin: 0;
+    margin-top: -15px;
   }
 
   #length-of-days {
